Refactors away from `Class.newInstance()`.